--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- css file-->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <!-- Mapbox JS -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <!--  geocoding js-->
-    <script src="/js/mapbox-geocoder-utils.js"></script>
+    <script src="/mapbox-geocoder-utils.js"></script>
     <!--Keys.js-->
-    <script src="/js/Keys.js"></script>
+    <script src="/Keys.js"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -38,14 +38,14 @@
 </div>
 <!--Music player-->
 <buton class="media-button" id="icon-play">
-    <img src="/files/play.png" id="icon">
+    <img src="/play.png" id="icon">
 </buton>
 <audio id="music" loop>
-    <source src="/files/[MP3DOWNLOAD.TO] When you love LoFi Hiphop but also love Metal (Djent)-320k.mp3" type="audio/mp3">
+    <source src="/%5BMP3DOWNLOAD.TO%5D%20When%20you%20love%20LoFi%20Hiphop%20but%20also%20love%20Metal%20(Djent)-320k.mp3" type="audio/mp3">
 </audio>
 <!--jquery-->
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <!--custom js-->
-<script src="/js/weather_map.js"></script>
+<script src="/weather_map.js"></script>
 </body>
 </html>
