--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <!--  geocoding js-->
-    <script src="/mapbox-geocoder-utils.js"></script>
+    <script src="mapbox-geocoder-utils.js"></script>
     <!--Keys.js-->
-    <script src="/Keys.js"></script>
+    <script src="Keys.js"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -38,7 +38,7 @@
 </div>
 <!--Music player-->
 <buton class="media-button" id="icon-play">
-    <img src="/play.png" id="icon">
+    <img src="play.png" id="icon">
 </buton>
 <audio id="music" loop>
     <source src="/%5BMP3DOWNLOAD.TO%5D%20When%20you%20love%20LoFi%20Hiphop%20but%20also%20love%20Metal%20(Djent)-320k.mp3" type="audio/mp3">
@@ -46,6 +46,6 @@
 <!--jquery-->
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <!--custom js-->
-<script src="/weather_map.js"></script>
+<script src="weather_map.js"></script>
 </body>
 </html>
