--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img src="play.png" id="icon">
 </buton>
 <audio id="music" loop>
-    <source src="/%5BMP3DOWNLOAD.TO%5D%20When%20you%20love%20LoFi%20Hiphop%20but%20also%20love%20Metal%20(Djent)-320k.mp3" type="audio/mp3">
+    <source src="music.mp3" type="audio/mp3">
 </audio>
 <!--jquery-->
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
