--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="main.css">
     <!-- Mapbox JS -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js" type="text/javascript"></script>
     <!--  geocoding js-->
-    <script src="mapbox-geocoder-utils.js"></script>
+    <script src="mapbox-geocoder-utils.js" type="text/javascript"></script>
     <!--Keys.js-->
-    <script src="Keys.js"></script>
+    <script src="Keys.js" type="text/javascript"></script>
+    <!--custom js-->
+    <script src="weather_map.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -27,7 +29,7 @@
     </div>
     <!--  search input form-->
     <form class="ml-2 mb-4 mt-4 text-white">
-        <input type="text/reset" class="form-control border-0" id="input" onmousedown="this.value=''">
+        <input type="text" class="form-control border-0" id="input" onmousedown="this.value=''">
         <button class="btn text-white d-none"  id="search-btn"></button>
     </form>
     <!--    cards container-->
@@ -44,8 +46,6 @@
     <source src="music.mp3" type="audio/mp3">
 </audio>
 <!--jquery-->
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-<!--custom js-->
-<script src="weather_map.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous" type="text/javascript"></script>
 </body>
 </html>
