--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <script src="mapbox-geocoder-utils.js" type="text/javascript"></script>
     <!--Keys.js-->
     <script src="Keys.js" type="text/javascript"></script>
-    <!--custom js-->
-    <script src="weather_map.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -46,6 +44,8 @@
     <source src="music.mp3" type="audio/mp3">
 </audio>
 <!--jquery-->
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous" type="text/javascript"></script>
+<script src="jquery-2.2.4.js" type="text/javascript"></script>
+<!--custom js-->
+<script src="weather_map.js" type="text/javascript"></script>
 </body>
 </html>
