--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js" type="text/javascript"></script>
     <!--  geocoding js-->
     <script src="mapbox-geocoder-utils.js" type="text/javascript"></script>
-    <!--Keys.js-->
-    <script src="Keys.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -43,6 +41,11 @@
 <audio id="music" loop>
     <source src="music.mp3" type="audio/mp3">
 </audio>
+<!--Keys.js-->
+<script src="Keys.js" type="text/javascript"></script>
+<!-- Mapbox JS -->
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js" type="text/javascript"></script>
 <!--jquery-->
 <script src="jquery-2.2.4.js" type="text/javascript"></script>
 <!--custom js-->
