--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js" type="text/javascript"></script>
 <!--jquery-->
-<script src="jquery-2.2.4.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <!--custom js-->
 <script src="weather_map.js" type="text/javascript"></script>
 </body>
