--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js" type="text/javascript"></script>
     <!--  geocoding js-->
-    <script src="mapbox-geocoder-utils.js" type="text/javascript"></script>
+    <script src="items/mapbox-geocoder-utils.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -37,19 +37,19 @@
 </div>
 <!--Music player-->
 <buton class="media-button" id="icon-play">
-    <img src="play.png" id="icon">
+    <img src="items/play.png" id="icon">
 </buton>
 <audio id="music" loop>
-    <source src="music.mp3" type="audio/mp3">
+    <source src="items/music.mp3" type="audio/mp3">
 </audio>
 <!--Keys.js-->
-<script src="Keys.js" type="text/javascript"></script>
+<script src="items/Keys.js" type="text/javascript"></script>
 <!-- Mapbox JS -->
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js" type="text/javascript"></script>
 <!--jquery-->
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <!--custom js-->
-<script src="weather_map.js" type="text/javascript"></script>
+<script src="items/weather_map.js" type="text/javascript"></script>
 </body>
 </html>
